--- a/package.json
+++ b/package.json
@@ -75,6 +75,7 @@
     "ngx-bootstrap": "^7.1.0",
     "platform": "^1.3.5",
     "qrcode": "^1.4.4",
+    "query-string": "^7.0.1",
     "redis": "^3.0.2",
     "rxjs": "^6.5.4",
     "tslib": "^2.0.0",
